--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -29,7 +27,26 @@
         .product:hover { transform: translateY(-5px); }
         .product img { width: 50%;  margin: 1px; border-radius: 10px; }
         .product-details { padding-top:5px;}
-        .cart { display: none; margin-top: 20px; padding: 15px; border: 1px solid #ddd; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); background-color: #fff; }
+        /* Estilo base del carrito */
+.cart {
+    position: fixed;
+    top: 0;
+    right: -90%; /* Inicialmente oculto a la derecha */
+    width: 90%; /* Ocupa el 90% del ancho de la pantalla */
+    height: 100vh; /* Altura completa de la ventana */
+    background-color: white;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+    transition: right 0.3s ease-in-out; /* Animación suave */
+    z-index: 1000; /* Asegura que esté por encima de otros elementos */
+    overflow-y: auto; /* Permite desplazamiento si el contenido es largo */
+    display: none; /* Ocultar inicialmente */
+}
+
+/* Clase para mostrar el carrito */
+.cart.open {
+    right: 0; /* Muestra el carrito deslizándolo hacia la izquierda */
+    display: block; /* Mostrar el carrito */
+}
         .cart-item { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
         .cart-item button { margin-left: 10px; }
         .cart-icon { font-size: 24px; cursor: pointer; position: fixed; top: 40px; right: 10px; background: white; padding: 10px; border-radius: 50%; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  z-index: 1000; /* Asegura que esté siempre encima */}
@@ -295,7 +312,7 @@
 	font-weight: bold;">Por favor, agrega productos al carrito.</div>
 
 <!-- start carrito -->
-<div class="cart">
+<div class="cart" id="carrito">
         <h3>Carrito de Compras</h3>
 
         <div id="cartItems"></div>
@@ -779,34 +796,23 @@ function removeFromCart(name, price, weight) {
 
 
 function toggleCart() {
-    let cartDiv = document.querySelector('.cart');
-    let agregarProductosDiv = document.getElementById('agregaproductos'); // Nuevo: Obtener el div del mensaje
-    let cartItems = document.getElementById('cartItems');
-    let totalElements = document.querySelectorAll('.cart p:not(#agregaproductos)');
-    let paymentOptions = document.getElementById('paymentOptions');
+    let cartDiv = document.querySelector('.cart'); // Obtener el carrito
 
-    if (cart.length === 0) {
-        // Si el carrito está vacío
-        if (cartDiv.style.display === 'block') {
-            // Si el carrito ya está abierto, ocultarlo
-            cartDiv.style.display = 'none';
-        } else {
-            // Si el carrito está cerrado, mostrar solo el mensaje
-            agregarProductosDiv.style.display = 'block'; // Mostrar el mensaje
-            cartItems.style.display = 'none'; // Ocultar los productos
-            totalElements.forEach(el => el.style.display = 'none'); // Ocultar los totales
-            paymentOptions.style.display = 'none'; // Ocultar las opciones de pago
-            cartDiv.style.display = 'block'; // Mostrar el carrito
-        }
+    // Alternar la clase 'open' para mostrar/ocultar el carrito
+    if (cartDiv.classList.contains('open')) {
+        cartDiv.classList.remove('open'); // Ocultar el carrito
+        setTimeout(() => {
+            cartDiv.style.display = 'none'; // Ocultar después de la animación
+        }, 300); // Tiempo igual a la duración de la animación (0.3s)
     } else {
-        // Si el carrito tiene productos, mostrar/ocultar el contenido normal
-        cartDiv.style.display = cartDiv.style.display === 'block' ? 'none' : 'block';
-        agregarProductosDiv.style.display = 'none'; // Ocultar el mensaje
-        cartItems.style.display = 'block'; // Mostrar los productos
-        totalElements.forEach(el => el.style.display = 'block'); // Mostrar los totales
-        paymentOptions.style.display = 'block'; // Mostrar las opciones de pago
-        updateCart(); // Actualizar el carrito
+        cartDiv.style.display = 'block'; // Mostrar el carrito antes de la animación
+        setTimeout(() => {
+            cartDiv.classList.add('open'); // Iniciar la animación
+        }, 10); // Pequeño retraso para asegurar que el elemento esté visible
     }
+
+    // Actualizar el contenido del carrito
+    updateCart();
 }
 
     function setShipping(type, cost) {
