--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -46,6 +46,7 @@
 .cart.open {
     right: 0; /* Muestra el carrito deslizándolo hacia la izquierda */
     display: block; /* Mostrar el carrito */
+	padding:10px;
 }
         .cart-item { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
         .cart-item button { margin-left: 10px; }
