--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -303,8 +303,8 @@
   Bienvenid@ a nuestra tienda en línea. 😊 Aquí puedes comprar o cotizar  tu pedido fácilmente
 </div>
 
-<div id="pesoMayorUnKilo" style="color: red; text-align: center; display: none; padding: 10px; border: 2px solid red; border-radius: 10px; background-color: #ffe6e6; font-weight: bold;">
-  ¡El peso total de los productos supera 1 kg!
+<div id="pesoMensaje" style="color: red; text-align: center; display: none; padding: 10px; border: 2px solid red; border-radius: 10px; background-color: #ffe6e6; font-weight: bold;">
+  <!-- El mensaje se actualizará dinámicamente aquí -->
 </div>
 <div id="agregaproductos" style="color: #888; text-align: center; display: none; padding: 10px; border: 2px solid #0CC; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); background-color: #0CC; cursor: pointer; transition: transform 0.2s; color: white; font-weight: bold;">
   Por favor, agrega productos al carrito.
@@ -726,7 +726,7 @@ function updateCart() {
         document.getElementById("finalTotal").textContent = "0.00";
         document.getElementById("finalTotal2").textContent = "0.00";
         document.getElementById("shippingtype").textContent = "Costo de comisión: $0.00";
-        document.getElementById('pesoMayorUnKilo').style.display = 'none'; // Ocultar el mensaje de peso
+        document.getElementById('pesoMensaje').style.display = 'none'; // Ocultar el mensaje de peso
         return; // Salir si el carrito está vacío
     }
 
@@ -764,11 +764,31 @@ function updateCart() {
     document.getElementById("finalTotal").textContent = finalTotal;
     document.getElementById("finalTotal2").textContent = finalTotal;
 
-    // Mostrar u ocultar el mensaje de peso mayor a 1 kg
-    if (totalWeight > 1) {
-        document.getElementById('pesoMayorUnKilo').style.display = 'block';
+    // Mostrar u ocultar el mensaje de peso según el rango
+    let pesoMensaje = document.getElementById('pesoMensaje');
+    if (totalWeight > 0) {
+        pesoMensaje.style.display = 'block';
+        if (totalWeight <= 1) {
+            pesoMensaje.textContent = 'El peso total es menor o igual a 1 kg.';
+        } else if (totalWeight <= 3) {
+            pesoMensaje.textContent = 'El peso total supera 1 kg y es menor o igual a 3 kg.';
+        } else if (totalWeight <= 6) {
+            pesoMensaje.textContent = 'El peso total supera 3 kg y es menor o igual a 6 kg.';
+        } else if (totalWeight <= 9) {
+            pesoMensaje.textContent = 'El peso total supera 6 kg y es menor o igual a 9 kg.';
+        } else if (totalWeight <= 15) {
+            pesoMensaje.textContent = 'El peso total supera 9 kg y es menor o igual a 15 kg.';
+        } else if (totalWeight <= 20) {
+            pesoMensaje.textContent = 'El peso total supera 15 kg y es menor o igual a 20 kg.';
+        } else if (totalWeight <= 25) {
+            pesoMensaje.textContent = 'El peso total supera 20 kg y es menor o igual a 25 kg.';
+        } else if (totalWeight <= 30) {
+            pesoMensaje.textContent = 'El peso total supera 25 kg y es menor o igual a 30 kg.';
+        } else {
+            pesoMensaje.textContent = 'El peso total supera 30 kg.';
+        }
     } else {
-        document.getElementById('pesoMayorUnKilo').style.display = 'none';
+        pesoMensaje.style.display = 'none';
     }
 
     // Mostrar u ocultar las opciones de pago
