--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -40,6 +40,7 @@
     z-index: 1000; /* Asegura que esté por encima de otros elementos */
     overflow-y: auto; /* Permite desplazamiento si el contenido es largo */
     display: none; /* Ocultar inicialmente */
+	padding:5px;
 }
 
 /* Clase para mostrar el carrito */
@@ -326,7 +327,7 @@
         
         <hr>
 <h2>1 Envío 🏠 🌐</h2>
-<div id="pesoMensaje" style="color: red; text-align: center;  padding: 10px; border: 2px solid red; border-radius: 10px; background-color: #ffe6e6; font-weight: bold;">
+<div id="pesoMensaje" style="text-align: center;  padding: 10px; font-weight: bold;">
   <!-- El mensaje se actualizará dinámicamente aquí -->
 </div>
 <div id="shippingInfo" class="shipping-info">Selecciona el tipo de envío.</div>
@@ -338,7 +339,7 @@
    <hr>     
 
     <div class="section">
-        <h2>3 Forma de Pago 💲 💳</h2>
+        <h2>2 Forma de Pago 💲 💳</h2>
         <div id="paymentInfo" class="payment-info">Selecciona el tipo de pago.</div>
 
         <h3>Total a pagar: $<span id="finalTotal2">0</span></h3>
@@ -367,7 +368,7 @@
 <hr>
     
 <div>
-        <h2>2 Registro de Compra 🪪</h2>
+        <h2>3 Registro de Compra 🪪</h2>
         <p>¡Gracias por elegir QuetzalArte.com! por favor llena los siguientes datos. 
             <br/>Nuestro equipo se pondrá en contacto contigo para asegurar que tu experiencia de compra sea excepcional.</p>
         <p>De no tener alguna pregunta, presione en comprar y su envío se enviará rápidamente.</p> 
@@ -643,8 +644,10 @@ Para obtener más información sobre pedidos especiales, no dudes en contactarno
             document.getElementById("finalTotal").textContent = "0.00";
             document.getElementById("finalTotal2").textContent = "0.00";
             document.getElementById("shippingtype").textContent = "Costo de comisión: $0.00";
-			     // Mostrar el mensaje en el elemento con ID 'pesoMensaje'
-        document.getElementById('pesoMensaje').textContent = 'Agregar más productos';
+			
+			     // Mostrar el mensaje en el elemento con ID 'pesoMensaje'       
+		let pesoMensaje = document.getElementById('pesoMensaje');
+pesoMensaje.textContent = 'Agregar más productos';
             return; // Salir si el carrito está vacío
         }
 
@@ -676,7 +679,7 @@ function updateCart() {
         itemDiv.className = 'cart-item';
         itemDiv.innerHTML = `
             ${item.description}  
-            <div style="text-align: right; display: inline-block;"> 
+           <div style="text-align: right; display: inline-block; padding-right: 50px;">
                 <input type="number" value="${item.quantity}" min="1" max="${originalStock[item.name]}" 
                     onchange="updateQuantity('${item.name}', this.value, ${item.price}, ${item.weight})">
                 x $${item.price} 
@@ -716,7 +719,7 @@ function updateCart() {
             <button onclick="setShipping('express', 199)">Envío Express - 3 días - Costo: $199</button>
             <button onclick="setShipping('premium', 499)">Envío Premium - 1 día - Costo: $499</button>
         </div>
-        <p>El peso total es menor o igual a 1 kg.</p>`;
+        <p>Categoría de peso: 1 kg.</p>`;
 } 
 else if (totalWeight <= 3) {
     pesoMensaje.innerHTML = `
@@ -724,7 +727,7 @@ else if (totalWeight <= 3) {
             <button onclick="setShipping('none', 0)">Sin Envío (entrega a cordar o archivo digital)</button>
             <button onclick="setShipping('3kg', 599)">Envío Rápido - 5 días - Costo: $599</button>
         </div>
-        <p>El peso total es menor o igual a 3 kg.</p>`;
+        <p>Categoría de peso: 3 kg.</p>`;
 } 
 else if (totalWeight <= 6) {
     pesoMensaje.innerHTML = `
@@ -732,7 +735,7 @@ else if (totalWeight <= 6) {
             <button onclick="setShipping('none', 0)">Sin Envío (entrega a cordar o archivo digital)</button>
             <button onclick="setShipping('6kg', 699)">Envío Rápido - 5 días - Costo: $699</button>
         </div>
-        <p>El peso total es menor o igual a 6 kg.</p>`;
+        <p>Categoría de peso: 6 kg.</p>`;
 }
 else if (totalWeight <= 9) {
     pesoMensaje.innerHTML = `
@@ -740,7 +743,7 @@ else if (totalWeight <= 9) {
             <button onclick="setShipping('none', 0)">Sin Envío (entrega a cordar o archivo digital)</button>
             <button onclick="setShipping('9kg', 799)">Envío Rápido - 5 días - Costo: $799</button>
         </div>
-        <p>El peso total es menor o igual a 9 kg.</p>`;
+        <p>Categoría de peso: 9 kg.</p>`;
 }
 else if (totalWeight <= 15) {
     pesoMensaje.innerHTML = `
@@ -748,7 +751,7 @@ else if (totalWeight <= 15) {
             <button onclick="setShipping('none', 0)">Sin Envío (entrega a cordar o archivo digital)</button>
             <button onclick="setShipping('15kg', 799)">Envío Rápido - 5 días - Costo: $799</button>
         </div>
-        <p>El peso total es menor o igual a 15 kg.</p>`;
+        <p>Categoría de peso: 15 kg.</p>`;
 }
 else if (totalWeight <= 20) { // Aquí estaba el error: faltaba cerrar el paréntesis
     pesoMensaje.innerHTML = `
@@ -756,7 +759,7 @@ else if (totalWeight <= 20) { // Aquí estaba el error: faltaba cerrar el parén
             <button onclick="setShipping('none', 0)">Sin Envío (entrega a cordar o archivo digital)</button>
             <button onclick="setShipping('20kg', 899)">Envío Rápido - 5 días - Costo: $899</button>
         </div>
-        <p>El peso total es menor o igual a 20 kg.</p>`;
+        <p>Categoría de peso: 20 kg.</p>`;
 }
 else if (totalWeight <= 25) {
     pesoMensaje.innerHTML = `
@@ -764,7 +767,7 @@ else if (totalWeight <= 25) {
             <button onclick="setShipping('none', 0)">Sin Envío (entrega a cordar o archivo digital)</button>
             <button onclick="setShipping('25kg', 999)">Envío Rápido - 5 días - Costo: $999</button>
         </div>
-        <p>El peso total es menor o igual a 25 kg.</p>`;
+        <p>Categoría de peso: 25 kg.</p>`;
 }
 else if (totalWeight <= 30) {
     pesoMensaje.innerHTML = `
@@ -772,7 +775,7 @@ else if (totalWeight <= 30) {
             <button onclick="setShipping('none', 0)">Sin Envío (entrega a cordar o archivo digital)</button>
             <button onclick="setShipping('30kg', 1600)">Envío Rápido - 5 días - Costo: $1600</button>
         </div>
-        <p>El peso total es menor o igual a 30 kg.</p>`;
+        <p>Categoría de peso: 30 kg.</p>`;
 }
 else {
     pesoMensaje.textContent = 'El peso total supera 30 kg.';
