--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -644,6 +644,8 @@ Para obtener más información sobre pedidos especiales, no dudes en contactarno
             document.getElementById("finalTotal").textContent = "0.00";
             document.getElementById("finalTotal2").textContent = "0.00";
             document.getElementById("shippingtype").textContent = "Costo de comisión: $0.00";
+			document.getElementById("shippingInfo").textContent = "Selecciona el tipo de envío";
+			document.getElementById("paymentInfo").textContent = "Selecciona el tipo de envío";
 			
 			     // Mostrar el mensaje en el elemento con ID 'pesoMensaje'       
 		let pesoMensaje = document.getElementById('pesoMensaje');
