--- a/temporizador.html
+++ b/temporizador.html
@@ -343,7 +343,7 @@
     temporizador1Finalizado = true;
     document.getElementById('btnTemporizador2').disabled = false; // Habilitar el botón del segundo temporizador
     if (temporizador2Finalizado) {
-      document.getElementById('finalizado').innerHTML = 'Ambos temporizadores han finalizado.'; // Mostrar cuando ambos han finalizado
+      document.getElementById('finalizado').innerHTML = 'Tiempos Finalizados'; // Mostrar cuando ambos han finalizado
     }
   }
 
@@ -356,7 +356,7 @@
     temporizador2Finalizado = true;
     document.querySelector("button").disabled = true;
     if (temporizador1Finalizado) {
-      document.getElementById('finalizado').innerHTML = 'Ambos temporizadores han finalizado.';
+      document.getElementById('finalizado').innerHTML = 'Tiempos Finalizados';
     }
   }
 
