--- a/temporizador.html
+++ b/temporizador.html
@@ -318,7 +318,7 @@
   // Función para finalizar el temporizador 1
   function finalizarCuentaRegresiva1() {
   clearInterval(cuentaRegresiva1);
-  document.getElementById('countdown-message1').innerHTML = '⏰ ¡Tiempo finalizado 1!';
+  document.getElementById('countdown-message1').innerHTML = '⏰ 1 FIN';
   hablar("Tiempo finalizado");
   temporizador1Finalizado = true;
 
@@ -336,7 +336,7 @@
   // Función para finalizar el temporizador 2
   function finalizarCuentaRegresiva2() {
     clearInterval(cuentaRegresiva2);
-    document.getElementById('countdown-message2').innerHTML = '⏰ ¡Tiempo finalizado 2!';
+    document.getElementById('countdown-message2').innerHTML = '⏰ 2 FIN';
     hablar("Tiempo finalizado");
     temporizador2Finalizado = true;
 
