--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -527,46 +527,46 @@
 
         <div class="product">
             <div class="stock">Stock: <span id="stockG">25</span></div>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_123456-MLM12345678901_012025-F.webp" alt="Producto G">
-            <span style="font-size:24px; display: block;"><strong>$299</strong></span>
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787338-MLU71273939627_082023-F-cojin-sello-plastico-no-1-sin-tinta-azor.webp" alt="Producto G">
+            <span style="font-size:24px; display: block;"><strong>$67</strong></span>
             <div class="product-details">
                 <input type="number" id="quantityG" value="1" min="1" max="25">
-                <button onclick="agregarAlCarrito(); addToCart('Producto G', 299, 0.120, 25, document.getElementById('quantityG').value, 'Tinta Negra Sellos Goma 50 ml.');" class="buy-button">
+                <button onclick="agregarAlCarrito(); addToCart('Producto G', 67, 0.038, 25, document.getElementById('quantityG').value, 'Cojin Sello Plastico No. 1 Sin Tinta Azor');" class="buy-button">
                     Comprar Ya!
                 </button>
             </div>
             <div class="product-details">
-                <span style="display:block; color:gray;">Tinta Negra para Sellos de Goma 50 ml.</span>
+                <span style="display:block; color:gray;">Cojin Sello Plastico No. 1 Sin Tinta Azor</span>
             </div>
         </div>
 
         <div class="product">
             <div class="stock">Stock: <span id="stockH">40</span></div>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_654321-MLM65432198765_012025-F.webp" alt="Producto H">
-            <span style="font-size:24px; display: block;"><strong>$499</strong></span>
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_836361-MLM81484878002_012025-F.webp" alt="Producto H">
+            <span style="font-size:24px; display: block;"><strong>$150</strong></span>
             <div class="product-details">
                 <input type="number" id="quantityH" value="1" min="1" max="40">
-                <button onclick="agregarAlCarrito(); addToCart('Producto H', 499, 0.250, 40, document.getElementById('quantityH').value, 'Tinta Azul Sellos Goma 100 ml.');" class="buy-button">
+                <button onclick="agregarAlCarrito(); addToCart('Producto H', 150, 0.250, 40, document.getElementById('quantityH').value, 'Sello de Goma Mediano Personalizado');" class="buy-button">
                     Comprar Ya!
                 </button>
             </div>
             <div class="product-details">
-                <span style="display:block; color:gray;">Tinta Azul para Sellos de Goma 100 ml.</span>
+                <span style="display:block; color:gray;">Sello de Goma Mediano Personalizado.</span>
             </div>
         </div>
 
         <div class="product">
             <div class="stock">Stock: <span id="stockI">15</span></div>
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_789012-MLM78901234567_012025-F.webp" alt="Producto I">
-            <span style="font-size:24px; display: block;"><strong>$799</strong></span>
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_829314-MLM79350037912_092024-F.webp" alt="Producto I">
+            <span style="font-size:24px; display: block;"><strong>$769</strong></span>
             <div class="product-details">
                 <input type="number" id="quantityI" value="1" min="1" max="15">
-                <button onclick="agregarAlCarrito(); addToCart('Producto I', 799, 0.500, 15, document.getElementById('quantityI').value, 'Tinta Roja Sellos Goma 250 ml.');" class="buy-button">
+                <button onclick="agregarAlCarrito(); addToCart('Producto I', 769, 0.500, 15, document.getElementById('quantityI').value, 'Tinta Roja Sellos Goma 250 ml.');" class="buy-button">
                     Comprar Ya!
                 </button>
             </div>
             <div class="product-details">
-                <span style="display:block; color:gray;">Tinta Roja para Sellos de Goma 250 ml.</span>
+                <span style="display:block; color:gray;">Tinta Blanca Para Sellos De Goma 500ml. Sella Papel Cartón</span>
             </div>
         </div>
 
